--- a/index.html
+++ b/index.html
@@ -16,11 +16,25 @@
         </div>
     </div>
     <div class="weekdays">
+        <div>
             <a class="weekday" href="">E</a>
+        </div>
+        <div>
             <a class="weekday" href="">T</a>
+            <div class="selected"></div>
+        </div>
+        <div>
             <a class="weekday" href="">K</a>
+        </div>
+        <div>
             <a class="weekday" href="">N</a>
+        </div>
+        <div>
             <a class="weekday" href="">R</a>
+        </div>
+            
+    </div>
+    <div class="clock">
     </div>
 
 </body>
