--- a/index.html
+++ b/index.html
@@ -1,27 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <div class="top-bar">
-        <div class="week-changer">
-            <a class="arrow-left">⇦</a>
-            <span>nädal XX</span>
-            <a class="arrow-right">⇨</a>
-            <a class="button" href="">a</a>
-        </div>
-    </div>
-    <div class="weekdays">
-            <a class="weekday" href="">E</a>
-            <a class="weekday" href="">T</a>
-            <a class="weekday" href="">K</a>
-            <a class="weekday" href="">N</a>
-            <a class="weekday" href="">R</a>
-    </div>
+    <title>Document</title>
+    <script src="style.css"></script>
+    <style class="schedule-box">
 
+    </style>
+</head>
+
+<body>
+    <h2>Esmaspäev</h2>
+
+    <div class="space">
+        <span class="time">8.30-10.00</span>
+        <span class="k206">K206</span>
+
+    </div>
 </body>
+
 </html>
