--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 
     <div class="space">
         <span class="time">8.30-10.00</span>
-        <span class="k206">K206</span>
+        <span class="maths">Matemaatika</span>
+        <img src="arrow.svg" >
 
     </div>
 </body>
