--- a/index.html
+++ b/index.html
@@ -7,21 +7,41 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
-    <script src="style.css"></script>
     <style class="schedule-box">
 
     </style>
 </head>
 
 <body>
+    <div class="weekdays">
     <h2>Esmaspäev</h2>
-
-    <div class="space">
-        <span class="time">8.30-10.00</span>
+    <h2>Teisipäev</h2>
+    <h2>Kolmapäev</h2>
+</div>
+    <div class="day">
+    <div class="maths-box">
+        <span class="time">8.30</span>
         <span class="maths">Matemaatika</span>
         <img src="arrow.svg" >
-
     </div>
+
+    <div class="english-box">
+        <span class="time1">10.15</span>
+        <span class="english">Inglise keel</span>
+        <img src="arrow.svg" >
+    </div>
+
+    <div class="free">
+        <span class="time3">12.45</span>
+    </div>
+
+    <div class="geography-box">
+        <span class="time2">12.45</span>
+        <span class="geography">Loodusgeograafia</span>
+        <img src="arrow.svg" >
+    </div>
+</div>
+
 </body>
 
 </html>
