removed duplicate styles

--- a/index.html
+++ b/index.html
@@ -13,35 +13,35 @@
 </head>
 
 <body>
-    <div class="weekdays">
-    <h2>Esmaspäev</h2>
-    <h2>Teisipäev</h2>
-    <h2>Kolmapäev</h2>
-</div>
-    <div class="day">
-    <div class="maths-box">
-        <span class="time">8.30</span>
-        <span class="maths">Matemaatika</span>
-        <img src="arrow.svg" >
-    </div>
+	<div class="weekdays">
+		<h2>Esmaspäev</h2>
+		<h2>Teisipäev</h2>
+		<h2>Kolmapäev</h2>
+	</div>
 
-    <div class="english-box">
-        <span class="time1">10.15</span>
-        <span class="english">Inglise keel</span>
-        <img src="arrow.svg" >
-    </div>
+	<div class="day">
+		<div class="lesson">
+			<span>8.30</span>
+			<span>Matemaatika</span>
+			<img src="arrow.svg" >
+		</div>
 
-    <div class="free">
-        <span class="time3">12.45</span>
-    </div>
+		<div class="lesson">
+			<span>10.15</span>
+			<span>Inglise keel</span>
+			<img src="arrow.svg" >
+		</div>
 
-    <div class="geography-box">
-        <span class="time2">12.45</span>
-        <span class="geography">Loodusgeograafia</span>
-        <img src="arrow.svg" >
-    </div>
-</div>
+		<div class="lesson free">
+			<span>12.45</span>
+		</div>
 
+		<div class="lesson">
+			<span>12.45</span>
+			<span>Loodusgeograafia</span>
+			<img src="arrow.svg" >
+		</div>
+	</div>
 </body>
 
 </html>
