margin on probleem

--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 <body>
     <div class="top-bar">
         <div class="week-changer">
-            <a class="arrow-left">⇦</a>
-            <span>nädal XX</span>
-            <a class="arrow-right">⇨</a>
-            <a class="button" href="">a</a>
+            <a class="arrow-left" href="">⇦</a>
+            <span>nädal 10</span>
+            <a class="arrow-right" href="">⇨</a>
+            <span> | 05.11.2020</span>
+            <img src="menu.svg">
         </div>
     </div>
     <div class="weekdays">
