fixed things with stuff

--- a/index.html
+++ b/index.html
@@ -13,14 +13,13 @@
 </head>
 
 <body>
-	<div class="top-bar">
-		<div class="week-changer">
+	<div class="week-changer">
+		<div id="changer">
 			<a class="arrow-left" href="">⇦</a>
-			<span>nädal 10</span>
+			<span>nädal 10 | 05.11.2020</span>
 			<a class="arrow-right" href="">⇨</a>
-			<span> | 05.11.2020</span>
-			<img src="menu.svg">
 		</div>
+		<img src="menu.svg">
 	</div>
 	<div class="weekdays">
 		<div>
