linking between bottom and search

--- a/Bottom_options/index.html
+++ b/Bottom_options/index.html
@@ -13,7 +13,7 @@
             <span>⭐</span>
             <span>Vaate nimetus (nt TA-20)</span>
         </div>
-       <span>🔍</span>
+       <a href="../Search/index.html">🔍</a> 
     </div>
 </body>
 </html>
