--- a/Search/index.html
+++ b/Search/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="search_window">
         <div class="exit_button">
-            <span>✖</span>
+            <a href="../Bottom_options/index.html">✖</a>
         </div>
         <div class="search_panel">
             <div>OTSI</div>
