added bottom bar

--- a/index.html
+++ b/index.html
@@ -44,6 +44,14 @@
 
 	<div id="table"></div>
 
+	<div class="bottom_options">
+		<div>
+			<span>⭐</span>
+			<span>Vaate nimetus (nt TA-20)</span>
+		</div>
+	   <a href="../Search/index.html">🔍</a> 
+	</div>
+
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
 	<script src="js/timetable.js"></script>
 	<script>new Timeteable(document.querySelector("#table"))</script>
