fixed stuff and added link to online

--- a/index.html
+++ b/index.html
@@ -13,30 +13,32 @@
 </head>
 
 <body>
-	<div class="week-changer">
-		<div id="changer">
-			<a class="arrow-left" href="">⇦</a>
-			<span>nädal 10 | 05.11.2020</span>
-			<a class="arrow-right" href="">⇨</a>
+	<div class="top-bar">
+		<div class="week-changer">
+			<div id="changer">
+				<a class="arrow-left" href="">⇦</a>
+				<span>nädal 10 | 05.11.2020</span>
+				<a class="arrow-right" href="">⇨</a>
+			</div>
+			<img src="menu.svg">
 		</div>
-		<img src="menu.svg">
-	</div>
-	<div class="weekdays">
-		<div>
-			<a class="weekday" href="">E</a>
-		</div>
-		<div>
-			<a class="weekday" href="">T</a>
-			<div class="selected"></div>
-		</div>
-		<div>
-			<a class="weekday" href="">K</a>
-		</div>
-		<div>
-			<a class="weekday" href="">N</a>
-		</div>
-		<div>
-			<a class="weekday" href="">R</a>
+		<div class="weekdays">
+			<div>
+				<a class="weekday" href="#monday">E</a>
+			</div>
+			<div>
+				<a class="weekday" href="#tuesday">T</a>
+				<div class="selected"></div>
+			</div>
+			<div>
+				<a class="weekday" href="#wednesday">K</a>
+			</div>
+			<div>
+				<a class="weekday" href="#thursday">N</a>
+			</div>
+			<div>
+				<a class="weekday" href="#friday">R</a>
+			</div>
 		</div>
 	</div>
 	<div class="clock">
